Draf PR: - initial work to add header columns to any row, this will help screen readers to emphasize the row header for the grid cell. - More info here: https://www.accessibility-developer-guide.com/examples/tables/multiple-headers/#marking-multiple-cells-as-headers https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/columnheader_role